syntax = "proto3";
package pb.network.protocol;

option go_package = "github.com/weisyn/v1/pb/network/protocol";

import "pb/blockchain/block/block.proto";

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * ğŸ›ï¸ WESå…±è¯†ç½‘ç»œåè®® - çŸ¿å·¥-èšåˆå™¨æ¶æ„
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 *
 * æœ¬åè®®å®šä¹‰WESç³»ç»Ÿçš„å…±è¯†ç½‘ç»œé€šä¿¡æ¶ˆæ¯ï¼ŒåŸºäºçŸ¿å·¥-èšåˆå™¨æ¶æ„è®¾è®¡ï¼š
 *
 * ğŸ¯ æ ¸å¿ƒæ¶æ„ï¼š
 * â€¢ çŸ¿å·¥è§’è‰²ï¼šè´Ÿè´£å€™é€‰åŒºå—åˆ›å»ºã€PoWè®¡ç®—ã€K-bucketè¿‘é‚»å‘é€
 * â€¢ èšåˆå™¨è§’è‰²ï¼šè´Ÿè´£å€™é€‰æ”¶é›†ã€å¤šå› å­å†³ç­–ã€æœ€ä¼˜åŒºå—é€‰æ‹©ã€ç»“æœåˆ†å‘
 * â€¢ ç½‘ç»œåè®®ï¼šå—æ§æ‰‡å‡ºã€ä¸­ç»§æœºåˆ¶ã€ç¯è·¯é¿å…çš„é«˜æ•ˆä¼ è¾“
 *
 * ğŸ“¡ åè®®æ˜ å°„ï¼š
 * â€¢ åŒºå—æäº¤ï¼š/weisyn/consensus/block_submission/1.0.0 (Stream RPC)
 * â€¢ å…±è¯†å¹¿æ’­ï¼šweisyn.consensus.latest_block.v1 (GossipSub Topic)
 * â€¢ å¿ƒè·³ç›‘æ§ï¼š/weisyn/consensus/heartbeat/1.0.0 (Stream RPC)
 *
 * ğŸ”„ äº¤äº’æµç¨‹ï¼š
 * 1. çŸ¿å·¥æŒ–å‡ºåŒºå— â†’ K-bucketé€‰æ‹©èšåˆå™¨ â†’ å‘é€MinerBlockSubmission
 * 2. èšåˆå™¨æ¥æ”¶ â†’ å€™é€‰éªŒè¯ä¸æ”¶é›† â†’ è¿”å›AggregatorBlockAcceptance
 * 3. èšåˆå™¨å†³ç­– â†’ é€‰æ‹©æœ€ä¼˜åŒºå— â†’ å¹¿æ’­ConsensusResultBroadcast
 * 4. å…¨ç½‘æ¥æ”¶ â†’ åŒºå—ç¡®è®¤å¤„ç† â†’ çŠ¶æ€æ›´æ–°åŒæ­¥
 *
 * ğŸ›¡ï¸ ç½‘ç»œä¼˜åŒ–ï¼š
 * â€¢ å—æ§æ‰‡å‡ºï¼šçŸ¿å·¥å‘2ä¸ªè¿‘é‚»èšåˆå™¨å‘é€ï¼Œä»»ä¸€æˆåŠŸå³å¯
 * â€¢ æ™ºèƒ½ä¸­ç»§ï¼šéèšåˆå™¨èŠ‚ç‚¹æ”¯æŒè‡³å¤šä¸€æ¬¡ä¸­ç»§ï¼ŒTTLæ§åˆ¶ç¯è·¯
 * â€¢ å»é‡æœºåˆ¶ï¼šåŸºäºåŒºå—å“ˆå¸Œçš„æœ¬åœ°TTLç¼“å­˜ï¼Œé˜²æ­¢é‡å¤å¤„ç†
 * â€¢ é”™è¯¯é€€é¿ï¼šå‘é€å¤±è´¥æ—¶çš„æŒ‡æ•°é€€é¿å’ŒèŠ‚ç‚¹åˆ‡æ¢ç­–ç•¥
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */

/**
 * BaseMessage - é€šç”¨æ¶ˆæ¯åŸºç¡€ç»“æ„
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šä¸ºæ‰€æœ‰å…±è¯†æ¶ˆæ¯æä¾›ç»Ÿä¸€çš„åŸºç¡€å­—æ®µ
 *
 * ğŸ”§ æ ¸å¿ƒå­—æ®µï¼š
 * - message_idï¼šå…¨å±€å”¯ä¸€æ¶ˆæ¯æ ‡è¯†ç¬¦ï¼Œç”¨äºå»é‡å’Œè¿½è¸ª
 * - versionï¼šåè®®ç‰ˆæœ¬ï¼Œæ”¯æŒåè®®æ¼”è¿›å’Œå…¼å®¹æ€§æ£€æŸ¥
 * - sender_idï¼šå‘é€è€…èŠ‚ç‚¹IDï¼Œç”¨äºèº«ä»½éªŒè¯å’Œè·¯ç”±
 * - timestamp_unixï¼šUnixæ—¶é—´æˆ³ï¼Œç”¨äºæ—¶åºéªŒè¯å’ŒTTLæ§åˆ¶
 * - signatureï¼šæ¶ˆæ¯ç­¾åï¼Œé˜²æ­¢ç¯¡æ”¹å’Œä¼ªé€ 
 *
 * ğŸ’¡ ä½¿ç”¨ä»·å€¼ï¼š
 * - ç»Ÿä¸€æ€§ï¼šæ‰€æœ‰å…±è¯†æ¶ˆæ¯éƒ½æœ‰ä¸€è‡´çš„åŸºç¡€ç»“æ„
 * - å®‰å…¨æ€§ï¼šé€šè¿‡ç­¾åç¡®ä¿æ¶ˆæ¯çš„å®Œæ•´æ€§å’ŒçœŸå®æ€§
 * - å¯è¿½è¸ªæ€§ï¼šé€šè¿‡message_idå®ç°ç«¯åˆ°ç«¯çš„æ¶ˆæ¯è¿½è¸ª
 * - ç‰ˆæœ¬æ§åˆ¶ï¼šæ”¯æŒåè®®çš„å¹³æ»‘å‡çº§å’Œå…¼å®¹æ€§ç®¡ç†
 */
message BaseMessage {
  string message_id = 1;                          // å…¨å±€å”¯ä¸€æ¶ˆæ¯æ ‡è¯†ç¬¦
  bytes sender_id = 2;                            // å‘é€è€…èŠ‚ç‚¹IDï¼ˆpeer.IDåºåˆ—åŒ–ï¼‰
  int64 timestamp_unix = 3;                       // æ¶ˆæ¯åˆ›å»ºæ—¶é—´æˆ³ï¼ˆUnixç§’ï¼‰
}

/**
 * MinerBlockSubmission - çŸ¿å·¥åŒºå—æäº¤æ¶ˆæ¯
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šçŸ¿å·¥å‘èšåˆå™¨æäº¤å€™é€‰åŒºå—çš„æ ‡å‡†æ¶ˆæ¯æ ¼å¼
 *
 * â›ï¸ çŸ¿å·¥å·¥ä½œæµï¼š
 * 1. å€™é€‰åˆ›å»ºï¼šä»äº¤æ˜“æ± é€‰æ‹©äº¤æ˜“ï¼Œåˆ›å»ºå€™é€‰åŒºå—æ¨¡æ¿
 * 2. PoWè®¡ç®—ï¼šæ‰§è¡Œå·¥ä½œé‡è¯æ˜ï¼Œæœç´¢æœ‰æ•ˆçš„Nonce
 * 3. ç›®æ ‡é€‰æ‹©ï¼šåŸºäºK-bucketè·ç¦»é€‰æ‹©2ä¸ªè¿‘é‚»èšåˆå™¨
 * 4. å¹¶å‘æäº¤ï¼šåŒæ—¶å‘é€‰ä¸­çš„èšåˆå™¨å‘é€MinerBlockSubmission
 * 5. å¿«é€Ÿè¿”å›ï¼šä»»ä¸€èšåˆå™¨æ¥å—å³å–æ¶ˆå…¶ä»–è¯·æ±‚
 *
 * ğŸ”„ V2 æ‰©å±•ï¼ˆ2025-12-15ï¼‰ï¼šå¼ƒæƒä¸é‡é€‰æœºåˆ¶
 * - waived_aggregatorsï¼šå·²çŸ¥å¼ƒæƒçš„èšåˆå™¨èŠ‚ç‚¹IDåˆ—è¡¨ï¼ˆé¿å…å›ç¯ï¼‰
 * - retry_attemptï¼šé‡è¯•æ¬¡æ•°ï¼ˆä»0å¼€å§‹ï¼Œæ¯æ¬¡é‡é€‰+1ï¼‰
 * - original_miner_peer_idï¼šåŸå§‹çŸ¿å·¥èŠ‚ç‚¹IDï¼ˆç”¨äºå›ç¯æ£€æµ‹ï¼‰
 */
message MinerBlockSubmission {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  pb.blockchain.core.Block candidate_block = 2;   // å€™é€‰åŒºå—ï¼ˆå®Œæ•´æ•°æ®ï¼‰
  bytes miner_peer_id = 3;                        // çŸ¿å·¥èŠ‚ç‚¹ID
  uint64 mining_difficulty = 4;                   // æŒ–çŸ¿éš¾åº¦å€¼
  uint64 mining_time_ms = 5;                      // PoWè®¡ç®—è€—æ—¶ï¼ˆæ¯«ç§’ï¼‰
  bytes parent_hash = 6;                          // çˆ¶åŒºå—å“ˆå¸Œï¼ˆK-bucketè·¯ç”±é”®ï¼‰
  uint32 relay_hop_limit = 7;                     // ä¸­ç»§è·³æ•°é™åˆ¶ï¼ˆé»˜è®¤1ï¼‰
  
  // V2 æ–°å¢ï¼šå¼ƒæƒä¸é‡é€‰æœºåˆ¶ï¼ˆä»…ç”¨äº"æœ¬é«˜åº¦è½®"çš„å¼ƒæƒé¿ç¯ï¼Œä¸åšè·¨é«˜åº¦/è·¨è½®æ¬¡ç´¯ç§¯ï¼‰
  repeated bytes waived_aggregators = 8;           // å·²çŸ¥å¼ƒæƒçš„èšåˆå™¨èŠ‚ç‚¹IDåˆ—è¡¨ï¼ˆé¿å…å›ç¯ï¼‰
  uint32 retry_attempt = 9;                       // é‡è¯•æ¬¡æ•°ï¼ˆä»0å¼€å§‹ï¼Œæ¯æ¬¡é‡é€‰+1ï¼‰
  bytes original_miner_peer_id = 10;              // åŸå§‹çŸ¿å·¥èŠ‚ç‚¹IDï¼ˆç”¨äºå›ç¯æ£€æµ‹ï¼‰
}

/**
 * AggregatorBlockAcceptance - èšåˆå™¨åŒºå—æ¥å—å“åº”
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šèšåˆå™¨å¯¹çŸ¿å·¥æäº¤çš„å€™é€‰åŒºå—ç»™å‡ºæ¥å—æˆ–æ‹’ç»å“åº”
 *
 * ğŸ”„ V2 æ‰©å±•ï¼ˆ2025-12-15ï¼‰ï¼šå¼ƒæƒå“åº”æœºåˆ¶
 * - waivedï¼šæ˜¯å¦å¼ƒæƒï¼ˆtrue=æœ¬èŠ‚ç‚¹å¼ƒæƒï¼Œfalse=æ¥å—/æ‹’ç»ï¼‰
 * - waiver_reasonï¼šå¼ƒæƒåŸå› ï¼ˆHEIGHT_TOO_FAR_AHEAD/AGGREGATION_IN_PROGRESSï¼‰
 * - local_heightï¼šæœ¬èŠ‚ç‚¹å½“å‰é«˜åº¦ï¼ˆå¯é€‰è¯Šæ–­å­—æ®µï¼Œä¸å‚ä¸è£å†³ï¼‰
 */
message AggregatorBlockAcceptance {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  string request_id = 2;                          // å¯¹åº”çš„æäº¤è¯·æ±‚ID
  bool accepted = 3;                              // æ˜¯å¦æ¥å—å€™é€‰åŒºå—
  string acceptance_reason = 4;                   // æ¥å—æˆ–æ‹’ç»çš„è¯¦ç»†åŸå› 
  bytes aggregator_peer_id = 5;                   // èšåˆå™¨èŠ‚ç‚¹ID
  uint64 timestamp = 6;                           // å¤„ç†æ—¶é—´æˆ³
  
  // V2 æ–°å¢ï¼šå¼ƒæƒå“åº”
  bool waived = 7;                                // æ˜¯å¦å¼ƒæƒï¼ˆtrue=æœ¬èŠ‚ç‚¹å¼ƒæƒï¼Œfalse=æ¥å—/æ‹’ç»ï¼‰
  WaiverReason waiver_reason = 8;                 // å¼ƒæƒåŸå› ï¼ˆæšä¸¾ï¼‰
  uint64 local_height = 9;                        // æœ¬èŠ‚ç‚¹å½“å‰é«˜åº¦ï¼ˆå¯é€‰è¯Šæ–­å­—æ®µï¼Œä¸å‚ä¸è£å†³ï¼‰
  
  enum WaiverReason {
    WAIVER_NONE = 0;                              // æœªå¼ƒæƒï¼ˆæ­£å¸¸æ¥å—/æ‹’ç»ï¼‰
    WAIVER_HEIGHT_TOO_FAR_AHEAD = 1;             // é«˜åº¦é¢†å…ˆè¿‡å¤šï¼ˆskew > maxFutureSkewï¼‰
    WAIVER_AGGREGATION_IN_PROGRESS = 2;          // æœ¬èŠ‚ç‚¹å½“å‰æ­£å¿™äºå¤„ç†è¯¥é«˜åº¦/å…¶ä»–é«˜åº¦ï¼ˆæœ¬è½®æ¢äººï¼‰
    WAIVER_READ_ONLY_MODE = 3;                   // èŠ‚ç‚¹å¤„äºåªè¯»æ¨¡å¼ï¼ˆæ•°æ®æŸåæˆ–ç»´æŠ¤ä¸­ï¼‰
  }
}

/**
 * ConsensusResultBroadcast - å…±è¯†ç»“æœå¹¿æ’­æ¶ˆæ¯
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šèšåˆå™¨å‘å…¨ç½‘å¹¿æ’­æœ€ç»ˆçš„å…±è¯†å†³ç­–ç»“æœ
 */
message ConsensusResultBroadcast {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  bytes selected_block_hash = 2;                  // é€‰ä¸­åŒºå—çš„å“ˆå¸Œ
  pb.blockchain.core.Block final_block = 3;       // æœ€ç»ˆé€‰æ‹©çš„åŒºå—
  bytes aggregator_peer_id = 4;                   // å†³ç­–èšåˆå™¨èŠ‚ç‚¹ID
  AggregationDecisionResult decision_result = 5;  // è¯¦ç»†çš„å†³ç­–ç»“æœ
  uint64 broadcast_timestamp = 6;                 // å¹¿æ’­æ—¶é—´æˆ³
}

/**
 * AggregationDecisionResult - èšåˆå†³ç­–è·ç¦»æ¦‚è¦ï¼ˆPoW+XORï¼‰
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šè®°å½•åŸºäºXORè·ç¦»çš„åŒºå—é€‰æ‹©å†³ç­–ç»“æœ
 */
message AggregationDecisionResult {
  uint32 total_candidates = 1;   // å‚ä¸å†³ç­–çš„å€™é€‰æ€»æ•°
  string selected_distance = 2;  // é€‰ä¸­åŒºå—ä¸çˆ¶åŒºå—çš„XORè·ç¦»ï¼ˆå¤§æ•´æ•°å­—ç¬¦ä¸²ï¼‰
  bool   tie_break_applied = 3;   // æ˜¯å¦åº”ç”¨äº†è·ç¦»tie-breaking
  string selection_reason = 4;    // é€‰æ‹©åŸå› ç®€è¿°ï¼ˆå¦‚ "xor_min_distance"ï¼‰
}

/**
 * ConsensusHeartbeat - å…±è¯†å¿ƒè·³æ¶ˆæ¯
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šèŠ‚ç‚¹é—´çš„çŠ¶æ€åŒæ­¥å’Œç½‘ç»œå¥åº·ç›‘æ§
 */
message ConsensusHeartbeat {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  NodeStatus node_status = 2;                     // èŠ‚ç‚¹å½“å‰çŠ¶æ€
  uint64 last_block_height = 3;                   // æœ€æ–°åŒºå—é«˜åº¦
  bytes last_block_hash = 4;                      // æœ€æ–°åŒºå—å“ˆå¸Œ
  uint32 connected_peers = 5;                     // å·²è¿æ¥å¯¹ç­‰èŠ‚ç‚¹æ•°

  enum NodeStatus {
    NODE_STATUS_UNKNOWN = 0;                     // æœªçŸ¥çŠ¶æ€
    NODE_STATUS_ACTIVE = 1;                      // æ´»è·ƒçŠ¶æ€
    NODE_STATUS_SYNCING = 2;                     // åŒæ­¥ä¸­
    NODE_STATUS_MINING = 3;                      // æŒ–çŸ¿ä¸­
    NODE_STATUS_AGGREGATING = 4;                 // èšåˆä¸­
    NODE_STATUS_OFFLINE = 5;                     // ç¦»çº¿çŠ¶æ€
  }
}

/**
 * ConsensusError - å…±è¯†é”™è¯¯æ¶ˆæ¯
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šæ ‡å‡†åŒ–å…±è¯†è¿‡ç¨‹ä¸­çš„é”™è¯¯æŠ¥å‘Šå’Œå¤„ç†
 */
message ConsensusError {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  ErrorCode error_code = 2;                       // æ ‡å‡†åŒ–é”™è¯¯ä»£ç 
  string error_description = 3;                   // é”™è¯¯è¯¦ç»†æè¿°
  optional string related_message_id = 4;         // ç›¸å…³æ¶ˆæ¯IDï¼ˆå¼•èµ·é”™è¯¯çš„æ¶ˆæ¯ï¼‰

  enum ErrorCode {
    ERROR_UNKNOWN = 0;                           // æœªçŸ¥é”™è¯¯
    ERROR_INVALID_MESSAGE = 1;                   // æ— æ•ˆæ¶ˆæ¯æ ¼å¼
    ERROR_INVALID_BLOCK = 2;                     // æ— æ•ˆåŒºå—æ•°æ®
    ERROR_INVALID_SIGNATURE = 3;                 // æ— æ•ˆç­¾å
    ERROR_NETWORK_TIMEOUT = 4;                   // ç½‘ç»œè¶…æ—¶
    ERROR_CONSENSUS_FAILURE = 5;                 // å…±è¯†å¤±è´¥
    ERROR_DUPLICATE_SUBMISSION = 6;              // é‡å¤æäº¤
  }
}

/**
 * AggregatorStatusQuery - èšåˆå™¨çŠ¶æ€æŸ¥è¯¢è¯·æ±‚
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šæäº¤è€…ä¸»åŠ¨æŸ¥è¯¢èšåˆå™¨çŠ¶æ€ï¼Œç”¨äºå¤„ç†å¹¿æ’­ä¸¢å¤±åœºæ™¯
 *
 * ğŸ“¡ åè®®æ˜ å°„ï¼š/weisyn/consensus/aggregator_status/1.0.0 (RPC)
 *
 * ğŸ”„ ä½¿ç”¨åœºæ™¯ï¼š
 * - æäº¤è€…ç­‰å¾…45ç§’åæœªæ”¶åˆ°Gossipå¹¿æ’­ï¼Œä¸»åŠ¨æŸ¥è¯¢èšåˆå™¨çŠ¶æ€
 * - æŸ¥è¯¢èšåˆå™¨æ˜¯å¦å·²å®Œæˆèšåˆï¼Œå¦‚æœå·²å®Œæˆåˆ™è·å–æœ€ç»ˆåŒºå—
 * - å¦‚æœèšåˆå™¨ç¦»çº¿ï¼Œè§¦å‘é‡é€‰æœºåˆ¶
 */
message AggregatorStatusQuery {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  uint64 height = 2;                              // æŸ¥è¯¢çš„ç›®æ ‡é«˜åº¦
  optional bytes candidate_block_hash = 3;        // æäº¤è€…è‡ªå·±çš„å€™é€‰åŒºå—å“ˆå¸Œï¼ˆå¯é€‰ï¼Œç”¨äºéªŒè¯ï¼‰
}

/**
 * AggregatorStatusResponse - èšåˆå™¨çŠ¶æ€æŸ¥è¯¢å“åº”
 *
 * ğŸ¯ è®¾è®¡ç›®çš„ï¼šèšåˆå™¨è¿”å›å½“å‰çŠ¶æ€ï¼Œä¾›æäº¤è€…åˆ¤æ–­ä¸‹ä¸€æ­¥åŠ¨ä½œ
 *
 * ğŸ”„ çŠ¶æ€è¯´æ˜ï¼š
 * - COLLECTINGï¼šæ­£åœ¨æ”¶é›†å€™é€‰åŒºå—
 * - EVALUATINGï¼šæ­£åœ¨è¯„ä¼°/é€‰ä¸¾
 * - DISTRIBUTINGï¼šæ­£åœ¨åˆ†å‘ç»“æœ
 * - COMPLETEDï¼šå·²å®Œæˆï¼ˆfinal_blockä¸ä¸ºç©ºï¼‰
 * - NOT_AGGREGATORï¼šæœ¬èŠ‚ç‚¹ä¸æ˜¯è¯¥é«˜åº¦çš„èšåˆå™¨ï¼ˆè§¦å‘é‡é€‰ï¼‰
 */
message AggregatorStatusResponse {
  BaseMessage base = 1;                           // æ¶ˆæ¯åŸºç¡€ä¿¡æ¯
  string request_id = 2;                          // å¯¹åº”çš„æŸ¥è¯¢è¯·æ±‚ID
  AggregatorState state = 3;                      // èšåˆå™¨å½“å‰çŠ¶æ€
  uint64 height = 4;                              // æŸ¥è¯¢çš„é«˜åº¦
  optional pb.blockchain.core.Block final_block = 5;  // å¦‚æœå·²å®Œæˆï¼Œè¿”å›æœ€ç»ˆåŒºå—
  uint64 collection_window_end_time = 6;         // æ”¶é›†çª—å£ç»“æŸæ—¶é—´ï¼ˆUnixç§’ï¼‰
  uint32 candidate_count = 7;                     // å·²æ”¶é›†çš„å€™é€‰æ•°é‡
  AggregatorStateReason reason = 8;               // çŠ¶æ€åŸå› ï¼ˆç”¨äºè¯Šæ–­ï¼‰
  
  enum AggregatorState {
    AGGREGATOR_STATE_UNKNOWN = 0;
    AGGREGATOR_STATE_COLLECTING = 1;             // æ­£åœ¨æ”¶é›†å€™é€‰
    AGGREGATOR_STATE_EVALUATING = 2;             // æ­£åœ¨è¯„ä¼°/é€‰ä¸¾
    AGGREGATOR_STATE_DISTRIBUTING = 3;           // æ­£åœ¨åˆ†å‘ç»“æœ
    AGGREGATOR_STATE_COMPLETED = 4;              // å·²å®Œæˆï¼ˆfinal_blockä¸ä¸ºç©ºï¼‰
    AGGREGATOR_STATE_NOT_AGGREGATOR = 5;        // æœ¬èŠ‚ç‚¹ä¸æ˜¯è¯¥é«˜åº¦çš„èšåˆå™¨
  }
  
  enum AggregatorStateReason {
    REASON_NONE = 0;
    REASON_WAITING_FOR_CANDIDATES = 1;           // ç­‰å¾…æ›´å¤šå€™é€‰
    REASON_CALCULATING_DISTANCES = 2;            // æ­£åœ¨è®¡ç®—è·ç¦»
    REASON_BROADCASTING_RESULT = 3;              // æ­£åœ¨å¹¿æ’­ç»“æœ
    REASON_ALREADY_COMPLETED = 4;                // å·²å®Œæˆ
    REASON_WRONG_AGGREGATOR = 5;                 // æŸ¥è¯¢äº†é”™è¯¯çš„èšåˆå™¨
  }
}
